--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,22 +53,6 @@
 	width: 40vh;
 }
 
-.drawing{
-	width: 35vw;
-	@include large{
-		width: 45vw;
-	}
-	@include medium{
-		width: 60vw;
-	}
-	@include small{
-		width: 70vw;
-	}
-	@include very-small{
-		width: 80vw;
-	}
-}
-
 .logoSubtitle{
 	@include font-style($white, 2rem, 400);
 	letter-spacing: 1px;
@@ -94,9 +78,32 @@
 	}
 }
 
+.drawing{
+	width: 35vw;
+	@include large{
+		width: 45vw;
+	}
+	@include medium{
+		width: 60vw;
+	}
+	@include small{
+		width: 70vw;
+	}
+	@include very-small{
+		width: 80vw;
+	}
+}
+
 .drawingSubtitle{
 	@include font-style($darkGray, 2.9rem, 400);
 	letter-spacing: 0.4px;
+	margin-left: 10vw;
+	margin-right: 10vw;
+}
+
+strong{
+	font-weight: normal;
+	color: $red;
 }
 
 .scrollButton{
@@ -111,10 +118,16 @@
 }
 
 .redButton{
-	@include box-shadow($darkGray 1px 1px 6px);
+	@include box-shadow($darkGray 1px 1px 8px);
 	background-color: $red;
 	border-width: 3px;
 	width: 4.8rem;
 	height: 4.8rem;
-	margin-top: 4vh;
+	margin-top: 5vh;
+	@include medium{
+		margin-top: 6vh;
+	}
+	@include small{
+		margin-top: 11vh;
+	}
 }
