--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,800);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800);
 /* line 6, ../sass/style.scss */
 .section {
   text-align: center;
@@ -80,35 +80,6 @@
 }
 
 /* line 56, ../sass/style.scss */
-.drawing {
-  width: 35vw;
-}
-@media (max-width: 1100px) {
-  /* line 56, ../sass/style.scss */
-  .drawing {
-    width: 45vw;
-  }
-}
-@media (max-width: 900px) {
-  /* line 56, ../sass/style.scss */
-  .drawing {
-    width: 60vw;
-  }
-}
-@media (max-width: 740px) {
-  /* line 56, ../sass/style.scss */
-  .drawing {
-    width: 70vw;
-  }
-}
-@media (max-width: 590px) {
-  /* line 56, ../sass/style.scss */
-  .drawing {
-    width: 80vw;
-  }
-}
-
-/* line 72, ../sass/style.scss */
 .logoSubtitle {
   font-family: 'Raleway';
   color: #FAEFF1;
@@ -121,31 +92,60 @@
   margin-right: 30vw;
 }
 @media (max-width: 1100px) {
-  /* line 72, ../sass/style.scss */
+  /* line 56, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 25vw;
     margin-right: 25vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 72, ../sass/style.scss */
+  /* line 56, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 20vw;
     margin-right: 20vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 72, ../sass/style.scss */
+  /* line 56, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 15vw;
     margin-right: 15vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 72, ../sass/style.scss */
+  /* line 56, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 8vw;
     margin-right: 8vw;
+  }
+}
+
+/* line 81, ../sass/style.scss */
+.drawing {
+  width: 35vw;
+}
+@media (max-width: 1100px) {
+  /* line 81, ../sass/style.scss */
+  .drawing {
+    width: 45vw;
+  }
+}
+@media (max-width: 900px) {
+  /* line 81, ../sass/style.scss */
+  .drawing {
+    width: 60vw;
+  }
+}
+@media (max-width: 740px) {
+  /* line 81, ../sass/style.scss */
+  .drawing {
+    width: 70vw;
+  }
+}
+@media (max-width: 590px) {
+  /* line 81, ../sass/style.scss */
+  .drawing {
+    width: 80vw;
   }
 }
 
@@ -156,9 +156,17 @@
   font-size: 2.9rem;
   font-weight: 400;
   letter-spacing: 0.4px;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 
-/* line 102, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
+strong {
+  font-weight: normal;
+  color: #D83454;
+}
+
+/* line 109, ../sass/style.scss */
 .scrollButton {
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -172,14 +180,26 @@
   border-color: #FAEFF1;
 }
 
-/* line 113, ../sass/style.scss */
+/* line 120, ../sass/style.scss */
 .redButton {
-  -moz-box-shadow: #434244 1px 1px 6px;
-  -webkit-box-shadow: #434244 1px 1px 6px;
-  box-shadow: #434244 1px 1px 6px;
+  -moz-box-shadow: #434244 1px 1px 8px;
+  -webkit-box-shadow: #434244 1px 1px 8px;
+  box-shadow: #434244 1px 1px 8px;
   background-color: #D83454;
   border-width: 3px;
   width: 4.8rem;
   height: 4.8rem;
-  margin-top: 4vh;
+  margin-top: 5vh;
+}
+@media (max-width: 900px) {
+  /* line 120, ../sass/style.scss */
+  .redButton {
+    margin-top: 6vh;
+  }
+}
+@media (max-width: 740px) {
+  /* line 120, ../sass/style.scss */
+  .redButton {
+    margin-top: 11vh;
+  }
 }
