Services section added along with OWLcarousel

--- a/sass/_bootstrap-variables.scss
+++ b/sass/_bootstrap-variables.scss
@@ -1,3 +1,5 @@
+@import 'variables'; 
+
 // Override Bootstrap variables here (defaults from bootstrap-sass v3.3.6):
 
 //
@@ -294,7 +296,7 @@
 
 // Medium screen / desktop
 //** Deprecated `$screen-md` as of v3.0.1
-// $screen-md:                  992px
+ $screen-md:                    $circlesColliding
 // $screen-md-min:              $screen-md
 //** Deprecated `$screen-desktop` as of v3.0.1
 // $screen-desktop:             $screen-md-min
