--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800);
 
-$breakpoints: (very-small: 590px, small: 740px, medium: 900px, large: 1100px);
-
-$white: #FAEFF1;
+$white: #FFF;
+$lightGray : #F1F2F2;
 $red : #D83454;
 $darkGray : #434244;
-$lightGray : #F1F2F2;
 $gray : #CBCBCB;
 $fontSize : 5.5vw;
+$circlesColliding : 700px;
+
+$breakpoints: (very-small: 590px, small: 740px, circlesColliding: $circlesColliding, medium: 900px, large: 1100px);
