--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800);
 /* line 7, ../sass/style.scss */
+* {
+  font-family: 'Raleway', sans-serif !important;
+}
+
+/* line 11, ../sass/style.scss */
 .section {
   text-align: center;
   text-align: -moz-center;
@@ -8,79 +13,93 @@
   margin-right: auto;
 }
 
-/* line 11, ../sass/style.scss */
-.red {
+/* line 16, ../sass/style.scss */
+.redBG {
   background-color: #D83454;
   height: 100vh;
+  width: 100vw;
   display: table-cell;
 }
-/* line 14, ../sass/style.scss */
-.red .sectionTop {
+/* line 20, ../sass/style.scss */
+.redBG .sectionTop {
   display: table-cell;
   vertical-align: bottom;
   height: 75vh;
 }
-/* line 19, ../sass/style.scss */
-.red .sectionBottom {
+/* line 25, ../sass/style.scss */
+.redBG .sectionBottom {
   margin-top: 10vh;
 }
 @media (max-width: 900px) {
-  /* line 19, ../sass/style.scss */
-  .red .sectionBottom {
+  /* line 25, ../sass/style.scss */
+  .redBG .sectionBottom {
     margin-top: 8vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 19, ../sass/style.scss */
-  .red .sectionBottom {
+  /* line 25, ../sass/style.scss */
+  .redBG .sectionBottom {
     margin-top: 6vh;
   }
 }
 
-/* line 30, ../sass/style.scss */
-.lightGray {
+/* line 36, ../sass/style.scss */
+.lightGrayBG {
   background-color: #F1F2F2;
   height: 100vh;
 }
-/* line 32, ../sass/style.scss */
-.lightGray .sectionTop {
+/* line 38, ../sass/style.scss */
+.lightGrayBG .sectionTop {
   display: inline-block;
   height: 75vh;
 }
 @media (max-width: 1100px) {
-  /* line 32, ../sass/style.scss */
-  .lightGray .sectionTop {
+  /* line 38, ../sass/style.scss */
+  .lightGrayBG .sectionTop {
     height: 70vh;
   }
 }
 @media (max-width: 900px) {
-  /* line 32, ../sass/style.scss */
-  .lightGray .sectionTop {
+  /* line 38, ../sass/style.scss */
+  .lightGrayBG .sectionTop {
     height: 65vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 32, ../sass/style.scss */
-  .lightGray .sectionTop {
+  /* line 38, ../sass/style.scss */
+  .lightGrayBG .sectionTop {
     height: 60vh;
   }
 }
 @media (max-width: 590px) {
-  /* line 32, ../sass/style.scss */
-  .lightGray .sectionTop {
+  /* line 38, ../sass/style.scss */
+  .lightGrayBG .sectionTop {
     height: 55vh;
   }
 }
 
-/* line 51, ../sass/style.scss */
+/* line 56, ../sass/style.scss */
+.whiteBG {
+  background-color: #FFF;
+  height: 100vh;
+}
+/* line 58, ../sass/style.scss */
+.whiteBG .sectionTop {
+  height: 75vh;
+}
+/* line 61, ../sass/style.scss */
+.whiteBG .sectionBottom {
+  margin-top: 7rem;
+}
+
+/* line 66, ../sass/style.scss */
 .imageCenter {
   width: 40vh;
 }
 
-/* line 55, ../sass/style.scss */
+/* line 70, ../sass/style.scss */
 .logoSubtitle {
-  font-family: 'Raleway';
-  color: #FAEFF1;
+  color: #F1F2F2;
   font-size: 2rem;
   font-weight: 400;
   letter-spacing: 1px;
@@ -90,41 +109,41 @@
   margin-right: 30vw;
 }
 @media (max-width: 1100px) {
-  /* line 55, ../sass/style.scss */
+  /* line 70, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 25vw;
     margin-right: 25vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 55, ../sass/style.scss */
+  /* line 70, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 20vw;
     margin-right: 20vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 55, ../sass/style.scss */
+  /* line 70, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 15vw;
     margin-right: 15vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 55, ../sass/style.scss */
+  /* line 70, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 8vw;
     margin-right: 8vw;
   }
 }
 
-/* line 80, ../sass/style.scss */
+/* line 95, ../sass/style.scss */
 .drawing {
   width: 75vh;
   margin-top: 9vw;
 }
 @media (max-width: 1100px) and (orientation: portrait) {
-  /* line 80, ../sass/style.scss */
+  /* line 95, ../sass/style.scss */
   .drawing {
     width: 35vh;
     margin-top: 11vw;
@@ -132,7 +151,7 @@
 }
 
 @media (max-width: 900px) and (orientation: portrait) {
-  /* line 80, ../sass/style.scss */
+  /* line 95, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 13vw;
@@ -140,7 +159,7 @@
 }
 
 @media (max-width: 740px) and (orientation: portrait) {
-  /* line 80, ../sass/style.scss */
+  /* line 95, ../sass/style.scss */
   .drawing {
     width: 60vh;
     margin-top: 15vw;
@@ -148,16 +167,15 @@
 }
 
 @media (max-width: 590px) and (orientation: portrait) {
-  /* line 80, ../sass/style.scss */
+  /* line 95, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 17vw;
   }
 }
 
-/* line 101, ../sass/style.scss */
+/* line 116, ../sass/style.scss */
 .drawingSubtitle {
-  font-family: 'Raleway';
   color: #434244;
   font-size: 2.9rem;
   font-weight: 400;
@@ -166,13 +184,13 @@
   margin-right: 10vw;
 }
 
-/* line 108, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 strong {
   font-weight: normal;
   color: #D83454;
 }
 
-/* line 113, ../sass/style.scss */
+/* line 128, ../sass/style.scss */
 .scrollButton {
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -183,22 +201,22 @@ strong {
   height: 5rem;
   border-style: solid;
   border-width: 2px;
-  border-color: #FAEFF1;
+  border-color: #F1F2F2;
   cursor: pointer;
   margin-left: auto;
   margin-right: auto;
-  -moz-box-shadow: #434244 1px 1px 8px;
-  -webkit-box-shadow: #434244 1px 1px 8px;
-  box-shadow: #434244 1px 1px 8px;
+  -moz-box-shadow: #434244 1px 1px 20px -5px;
+  -webkit-box-shadow: #434244 1px 1px 20px -5px;
+  box-shadow: #434244 1px 1px 20px -5px;
 }
-/* line 126, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 .scrollButton:active {
   -moz-box-shadow: #434244 0px 0px 0px;
   -webkit-box-shadow: #434244 0px 0px 0px;
   box-shadow: #434244 0px 0px 0px;
 }
 
-/* line 131, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 .redButton {
   background-color: #D83454;
   border-width: 3px;
@@ -207,14 +225,125 @@ strong {
   margin-top: 5vh;
 }
 @media (max-width: 900px) {
-  /* line 131, ../sass/style.scss */
+  /* line 146, ../sass/style.scss */
   .redButton {
     margin-top: 6vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 131, ../sass/style.scss */
+  /* line 146, ../sass/style.scss */
   .redButton {
     margin-top: 11vh;
+  }
+}
+
+/* line 160, ../sass/style.scss */
+.blackButton {
+  border-color: #434244;
+  border-width: 2.5px;
+  width: 4.8rem;
+  height: 4.8rem;
+  margin-top: 5vh;
+}
+
+/* line 168, ../sass/style.scss */
+.titleWithMargin {
+  color: #434244;
+  font-size: 6.3rem;
+  font-weight: 400;
+  margin-top: 0;
+  padding-top: 4rem;
+  margin-bottom: 10.5rem;
+}
+@media (max-width: 700px) {
+  /* line 168, ../sass/style.scss */
+  .titleWithMargin {
+    margin-bottom: 3rem;
+  }
+}
+
+/* line 178, ../sass/style.scss */
+.servicesContainer {
+  width: 77vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (max-width: 993px) {
+  /* line 178, ../sass/style.scss */
+  .servicesContainer {
+    width: 90vw;
+  }
+}
+@media (max-width: 700px) {
+  /* line 178, ../sass/style.scss */
+  .servicesContainer {
+    text-align: left;
+  }
+}
+
+/* line 190, ../sass/style.scss */
+.circle {
+  -moz-border-radius: 25vh;
+  -webkit-border-radius: 25vh;
+  border-radius: 25vh;
+  width: 14vw;
+  height: 14vw;
+}
+@media (max-width: 700px) {
+  /* line 190, ../sass/style.scss */
+  .circle {
+    width: 12vh;
+    height: 12vh;
+    display: inline-block;
+    vertical-align: middle;
+    margin-bottom: 2rem;
+  }
+}
+
+/* line 203, ../sass/style.scss */
+.service1 {
+  background: #D83454 url("../images/service1.png") no-repeat center/44%;
+}
+
+/* line 206, ../sass/style.scss */
+.service2 {
+  background: #D83454 url("../images/service2.png") no-repeat center/44%;
+}
+
+/* line 209, ../sass/style.scss */
+.service3 {
+  background: #D83454 url("../images/service3.png") no-repeat center/44%;
+}
+
+/* line 212, ../sass/style.scss */
+.service4 {
+  background: #D83454 url("../images/service4.png") no-repeat center/44%;
+}
+
+/* line 216, ../sass/style.scss */
+.circleSubtitle {
+  color: #434244;
+  font-size: 2rem;
+  font-weight: 500;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+  margin-top: 5rem;
+}
+@media (max-width: 700px) {
+  /* line 216, ../sass/style.scss */
+  .circleSubtitle {
+    margin-top: 2rem;
+    display: inline-block;
+    vertical-align: super;
+    margin-left: 2.5rem;
+  }
+}
+@media (max-width: 360px) {
+  /* line 216, ../sass/style.scss */
+  .circleSubtitle {
+    margin-left: 0.5rem;
+    color: #434244;
+    font-size: 1.7rem;
+    font-weight: 500;
   }
 }
