--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -3,6 +3,11 @@
   height: 100vh;
 }
 
+@mixin ieCenterer(){
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @mixin font-style($color, $fontSize, $fontWeight){
   color: $color;
   font-size: $fontSize;
