--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,9 +2,13 @@
 /* line 7, ../sass/style.scss */
 * {
   font-family: 'Raleway', sans-serif !important;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
-/* line 11, ../sass/style.scss */
+/* line 12, ../sass/style.scss */
 .section {
   text-align: center;
   text-align: -moz-center;
@@ -13,91 +17,100 @@
   margin-right: auto;
 }
 
-/* line 16, ../sass/style.scss */
-.redBG {
+/* line 17, ../sass/style.scss */
+.firstType {
   background-color: #D83454;
   height: 100vh;
   width: 100vw;
   display: table-cell;
 }
-/* line 20, ../sass/style.scss */
-.redBG .sectionTop {
+/* line 21, ../sass/style.scss */
+.firstType .sectionTop {
   display: table-cell;
   vertical-align: bottom;
   height: 75vh;
 }
-/* line 25, ../sass/style.scss */
-.redBG .sectionBottom {
+/* line 26, ../sass/style.scss */
+.firstType .sectionBottom {
   margin-top: 10vh;
 }
 @media (max-width: 900px) {
-  /* line 25, ../sass/style.scss */
-  .redBG .sectionBottom {
+  /* line 26, ../sass/style.scss */
+  .firstType .sectionBottom {
     margin-top: 8vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 25, ../sass/style.scss */
-  .redBG .sectionBottom {
+  /* line 26, ../sass/style.scss */
+  .firstType .sectionBottom {
     margin-top: 6vh;
   }
 }
 
-/* line 36, ../sass/style.scss */
-.lightGrayBG {
+/* line 37, ../sass/style.scss */
+.secondType {
   background-color: #F1F2F2;
   height: 100vh;
 }
-/* line 38, ../sass/style.scss */
-.lightGrayBG .sectionTop {
-  display: inline-block;
+/* line 39, ../sass/style.scss */
+.secondType .sectionTop {
   height: 75vh;
 }
 @media (max-width: 1100px) {
-  /* line 38, ../sass/style.scss */
-  .lightGrayBG .sectionTop {
+  /* line 39, ../sass/style.scss */
+  .secondType .sectionTop {
     height: 70vh;
   }
 }
 @media (max-width: 900px) {
-  /* line 38, ../sass/style.scss */
-  .lightGrayBG .sectionTop {
+  /* line 39, ../sass/style.scss */
+  .secondType .sectionTop {
     height: 65vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 38, ../sass/style.scss */
-  .lightGrayBG .sectionTop {
+  /* line 39, ../sass/style.scss */
+  .secondType .sectionTop {
     height: 60vh;
   }
 }
 @media (max-width: 590px) {
-  /* line 38, ../sass/style.scss */
-  .lightGrayBG .sectionTop {
+  /* line 39, ../sass/style.scss */
+  .secondType .sectionTop {
     height: 55vh;
   }
 }
 
-/* line 56, ../sass/style.scss */
-.whiteBG {
+/* line 57, ../sass/style.scss */
+.thirdType {
   background-color: #FFF;
   height: 100vh;
 }
-/* line 58, ../sass/style.scss */
-.whiteBG .sectionTop {
+/* line 59, ../sass/style.scss */
+.thirdType .sectionTop {
   height: 75vh;
 }
-/* line 61, ../sass/style.scss */
-.whiteBG .sectionBottom {
+/* line 62, ../sass/style.scss */
+.thirdType .sectionBottom {
   margin-top: 7rem;
 }
 
-/* line 66, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
+.fourthType {
+  background-color: #F1F2F2;
+  height: 100vh;
+}
+/* line 69, ../sass/style.scss */
+.fourthType .sectionTop {
+  height: 75vh;
+}
+
+/* line 74, ../sass/style.scss */
 .imageCenter {
   width: 40vh;
 }
 
-/* line 70, ../sass/style.scss */
+/* line 78, ../sass/style.scss */
 .logoSubtitle {
   color: #F1F2F2;
   font-size: 2rem;
@@ -109,41 +122,41 @@
   margin-right: 30vw;
 }
 @media (max-width: 1100px) {
-  /* line 70, ../sass/style.scss */
+  /* line 78, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 25vw;
     margin-right: 25vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 70, ../sass/style.scss */
+  /* line 78, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 20vw;
     margin-right: 20vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 70, ../sass/style.scss */
+  /* line 78, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 15vw;
     margin-right: 15vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 70, ../sass/style.scss */
+  /* line 78, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 8vw;
     margin-right: 8vw;
   }
 }
 
-/* line 95, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 .drawing {
   width: 75vh;
   margin-top: 9vw;
 }
 @media (max-width: 1100px) and (orientation: portrait) {
-  /* line 95, ../sass/style.scss */
+  /* line 103, ../sass/style.scss */
   .drawing {
     width: 35vh;
     margin-top: 11vw;
@@ -151,7 +164,7 @@
 }
 
 @media (max-width: 900px) and (orientation: portrait) {
-  /* line 95, ../sass/style.scss */
+  /* line 103, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 13vw;
@@ -159,7 +172,7 @@
 }
 
 @media (max-width: 740px) and (orientation: portrait) {
-  /* line 95, ../sass/style.scss */
+  /* line 103, ../sass/style.scss */
   .drawing {
     width: 60vh;
     margin-top: 15vw;
@@ -167,14 +180,14 @@
 }
 
 @media (max-width: 590px) and (orientation: portrait) {
-  /* line 95, ../sass/style.scss */
+  /* line 103, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 17vw;
   }
 }
 
-/* line 116, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .drawingSubtitle {
   color: #434244;
   font-size: 2.9rem;
@@ -184,17 +197,19 @@
   margin-right: 10vw;
 }
 
-/* line 123, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 strong {
   font-weight: normal;
   color: #D83454;
 }
 
-/* line 128, ../sass/style.scss */
+/* line 136, ../sass/style.scss */
 .scrollButton {
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
   border-radius: 25px;
+  margin-left: auto;
+  margin-right: auto;
   background: url("../images/arrowDown.png") no-repeat center;
   background-size: 35%;
   width: 5rem;
@@ -203,20 +218,18 @@ strong {
   border-width: 2px;
   border-color: #F1F2F2;
   cursor: pointer;
-  margin-left: auto;
-  margin-right: auto;
   -moz-box-shadow: #434244 1px 1px 20px -5px;
   -webkit-box-shadow: #434244 1px 1px 20px -5px;
   box-shadow: #434244 1px 1px 20px -5px;
 }
-/* line 141, ../sass/style.scss */
+/* line 148, ../sass/style.scss */
 .scrollButton:active {
   -moz-box-shadow: #434244 0px 0px 0px;
   -webkit-box-shadow: #434244 0px 0px 0px;
   box-shadow: #434244 0px 0px 0px;
 }
 
-/* line 146, ../sass/style.scss */
+/* line 153, ../sass/style.scss */
 .redButton {
   background-color: #D83454;
   border-width: 3px;
@@ -225,19 +238,19 @@ strong {
   margin-top: 5vh;
 }
 @media (max-width: 900px) {
-  /* line 146, ../sass/style.scss */
+  /* line 153, ../sass/style.scss */
   .redButton {
     margin-top: 6vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 146, ../sass/style.scss */
+  /* line 153, ../sass/style.scss */
   .redButton {
     margin-top: 11vh;
   }
 }
 
-/* line 160, ../sass/style.scss */
+/* line 167, ../sass/style.scss */
 .blackButton {
   border-color: #434244;
   border-width: 2.5px;
@@ -246,7 +259,7 @@ strong {
   margin-top: 5vh;
 }
 
-/* line 168, ../sass/style.scss */
+/* line 175, ../sass/style.scss */
 .titleWithMargin {
   color: #434244;
   font-size: 6.3rem;
@@ -256,32 +269,32 @@ strong {
   margin-bottom: 10.5rem;
 }
 @media (max-width: 700px) {
-  /* line 168, ../sass/style.scss */
+  /* line 175, ../sass/style.scss */
   .titleWithMargin {
     margin-bottom: 3rem;
   }
 }
 
-/* line 178, ../sass/style.scss */
+/* line 185, ../sass/style.scss */
 .servicesContainer {
-  width: 77vw;
   margin-left: auto;
   margin-right: auto;
+  width: 77vw;
 }
 @media (max-width: 993px) {
-  /* line 178, ../sass/style.scss */
+  /* line 185, ../sass/style.scss */
   .servicesContainer {
     width: 90vw;
   }
 }
 @media (max-width: 700px) {
-  /* line 178, ../sass/style.scss */
+  /* line 185, ../sass/style.scss */
   .servicesContainer {
     text-align: left;
   }
 }
 
-/* line 190, ../sass/style.scss */
+/* line 196, ../sass/style.scss */
 .circle {
   -moz-border-radius: 25vh;
   -webkit-border-radius: 25vh;
@@ -290,7 +303,7 @@ strong {
   height: 14vw;
 }
 @media (max-width: 700px) {
-  /* line 190, ../sass/style.scss */
+  /* line 196, ../sass/style.scss */
   .circle {
     width: 12vh;
     height: 12vh;
@@ -300,27 +313,27 @@ strong {
   }
 }
 
-/* line 203, ../sass/style.scss */
+/* line 209, ../sass/style.scss */
 .service1 {
   background: #D83454 url("../images/service1.png") no-repeat center/44%;
 }
 
-/* line 206, ../sass/style.scss */
+/* line 212, ../sass/style.scss */
 .service2 {
   background: #D83454 url("../images/service2.png") no-repeat center/44%;
 }
 
-/* line 209, ../sass/style.scss */
+/* line 215, ../sass/style.scss */
 .service3 {
   background: #D83454 url("../images/service3.png") no-repeat center/44%;
 }
 
-/* line 212, ../sass/style.scss */
+/* line 218, ../sass/style.scss */
 .service4 {
   background: #D83454 url("../images/service4.png") no-repeat center/44%;
 }
 
-/* line 216, ../sass/style.scss */
+/* line 222, ../sass/style.scss */
 .circleSubtitle {
   color: #434244;
   font-size: 2rem;
@@ -330,7 +343,7 @@ strong {
   margin-top: 5rem;
 }
 @media (max-width: 700px) {
-  /* line 216, ../sass/style.scss */
+  /* line 222, ../sass/style.scss */
   .circleSubtitle {
     margin-top: 2rem;
     display: inline-block;
@@ -339,11 +352,104 @@ strong {
   }
 }
 @media (max-width: 360px) {
-  /* line 216, ../sass/style.scss */
+  /* line 222, ../sass/style.scss */
   .circleSubtitle {
     margin-left: 0.5rem;
     color: #434244;
     font-size: 1.7rem;
     font-weight: 500;
   }
+}
+
+/* line 237, ../sass/style.scss */
+.client {
+  -webkit-filter: grayscale(100%) brightness(60%);
+  filter: grayscale(100%) brightness(60%);
+  margin-left: auto;
+  margin-right: auto;
+  width: 18.5rem;
+  height: 18.5rem;
+  cursor: pointer;
+}
+/* line 243, ../sass/style.scss */
+.client:hover {
+  -webkit-filter: grayscale(0%) brightness(100%);
+  filter: grayscale(0%) brightness(100%);
+}
+
+/* line 248, ../sass/style.scss */
+.client1 {
+  background: url("../images/client1.png") no-repeat center/100%;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  opacity: 0.6;
+}
+/* line 251, ../sass/style.scss */
+.client1:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+}
+
+/* line 255, ../sass/style.scss */
+.client2 {
+  background: url("../images/client2.png") no-repeat center/100%;
+}
+
+/* line 258, ../sass/style.scss */
+.client3 {
+  background: url("../images/client3.png") no-repeat center/80%;
+}
+
+/* line 261, ../sass/style.scss */
+.client4 {
+  background: url("../images/logo.png") no-repeat center/100%;
+}
+
+/* line 265, ../sass/style.scss */
+.owl-wrapper-outer {
+  z-index: 20;
+}
+
+/* line 268, ../sass/style.scss */
+.owl-buttons {
+  position: absolute !important;
+  top: 5.5rem !important;
+  width: 100%;
+  padding-left: 3vw;
+  padding-right: 3vw;
+}
+@media (max-width: 1100px) {
+  /* line 268, ../sass/style.scss */
+  .owl-buttons {
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
+  }
+}
+@media (max-width: 900px) {
+  /* line 268, ../sass/style.scss */
+  .owl-buttons {
+    padding-left: 0vw;
+    padding-right: 0vw;
+  }
+}
+@media (max-width: 740px) {
+  /* line 268, ../sass/style.scss */
+  .owl-buttons {
+    display: none;
+  }
+}
+
+/* line 287, ../sass/style.scss */
+.owl-prev, .owl-next {
+  font-size: 4rem !important;
+  font-weight: 600 !important;
+  color: gray !important;
+  background: none !important;
+  position: relative;
+  z-index: 40;
+  float: left;
+}
+
+/* line 297, ../sass/style.scss */
+.owl-next {
+  float: right;
 }
