--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -82,16 +82,16 @@
 }
 
 /* line 57, ../sass/style.scss */
-.thirdType {
+.thirdType, .fourthType {
   background-color: #FFF;
   height: 100vh;
 }
 /* line 59, ../sass/style.scss */
-.thirdType .sectionTop {
+.thirdType .sectionTop, .fourthType .sectionTop {
   height: 75vh;
 }
 /* line 62, ../sass/style.scss */
-.thirdType .sectionBottom {
+.thirdType .sectionBottom, .fourthType .sectionBottom {
   margin-top: 7rem;
 }
 
@@ -100,17 +100,13 @@
   background-color: #F1F2F2;
   height: 100vh;
 }
-/* line 69, ../sass/style.scss */
-.fourthType .sectionTop {
-  height: 75vh;
-}
 
-/* line 74, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 .imageCenter {
   width: 40vh;
 }
 
-/* line 78, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .logoSubtitle {
   color: #F1F2F2;
   font-size: 2rem;
@@ -122,41 +118,41 @@
   margin-right: 30vw;
 }
 @media (max-width: 1100px) {
-  /* line 78, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 25vw;
     margin-right: 25vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 78, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 20vw;
     margin-right: 20vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 78, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 15vw;
     margin-right: 15vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 78, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 8vw;
     margin-right: 8vw;
   }
 }
 
-/* line 103, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .drawing {
   width: 75vh;
   margin-top: 9vw;
 }
 @media (max-width: 1100px) and (orientation: portrait) {
-  /* line 103, ../sass/style.scss */
+  /* line 101, ../sass/style.scss */
   .drawing {
     width: 35vh;
     margin-top: 11vw;
@@ -164,7 +160,7 @@
 }
 
 @media (max-width: 900px) and (orientation: portrait) {
-  /* line 103, ../sass/style.scss */
+  /* line 101, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 13vw;
@@ -172,7 +168,7 @@
 }
 
 @media (max-width: 740px) and (orientation: portrait) {
-  /* line 103, ../sass/style.scss */
+  /* line 101, ../sass/style.scss */
   .drawing {
     width: 60vh;
     margin-top: 15vw;
@@ -180,14 +176,14 @@
 }
 
 @media (max-width: 590px) and (orientation: portrait) {
-  /* line 103, ../sass/style.scss */
+  /* line 101, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 17vw;
   }
 }
 
-/* line 124, ../sass/style.scss */
+/* line 122, ../sass/style.scss */
 .drawingSubtitle {
   color: #434244;
   font-size: 2.9rem;
@@ -197,13 +193,13 @@
   margin-right: 10vw;
 }
 
-/* line 131, ../sass/style.scss */
+/* line 129, ../sass/style.scss */
 strong {
   font-weight: normal;
   color: #D83454;
 }
 
-/* line 136, ../sass/style.scss */
+/* line 134, ../sass/style.scss */
 .scrollButton {
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -222,14 +218,14 @@ strong {
   -webkit-box-shadow: #434244 1px 1px 20px -5px;
   box-shadow: #434244 1px 1px 20px -5px;
 }
-/* line 148, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 .scrollButton:active {
   -moz-box-shadow: #434244 0px 0px 0px;
   -webkit-box-shadow: #434244 0px 0px 0px;
   box-shadow: #434244 0px 0px 0px;
 }
 
-/* line 153, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 .redButton {
   background-color: #D83454;
   border-width: 3px;
@@ -238,19 +234,19 @@ strong {
   margin-top: 5vh;
 }
 @media (max-width: 900px) {
-  /* line 153, ../sass/style.scss */
+  /* line 151, ../sass/style.scss */
   .redButton {
     margin-top: 6vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 153, ../sass/style.scss */
+  /* line 151, ../sass/style.scss */
   .redButton {
     margin-top: 11vh;
   }
 }
 
-/* line 167, ../sass/style.scss */
+/* line 165, ../sass/style.scss */
 .blackButton {
   border-color: #434244;
   border-width: 2.5px;
@@ -259,8 +255,8 @@ strong {
   margin-top: 5vh;
 }
 
-/* line 175, ../sass/style.scss */
-.titleWithMargin {
+/* line 173, ../sass/style.scss */
+.titleWithMargin, .titleWithoutMargin {
   color: #434244;
   font-size: 6.3rem;
   font-weight: 400;
@@ -269,32 +265,37 @@ strong {
   margin-bottom: 10.5rem;
 }
 @media (max-width: 700px) {
-  /* line 175, ../sass/style.scss */
-  .titleWithMargin {
+  /* line 173, ../sass/style.scss */
+  .titleWithMargin, .titleWithoutMargin {
     margin-bottom: 3rem;
   }
 }
 
-/* line 185, ../sass/style.scss */
+/* line 182, ../sass/style.scss */
+.titleWithoutMargin {
+  margin-bottom: 3rem;
+}
+
+/* line 187, ../sass/style.scss */
 .servicesContainer {
   margin-left: auto;
   margin-right: auto;
   width: 77vw;
 }
 @media (max-width: 993px) {
-  /* line 185, ../sass/style.scss */
+  /* line 187, ../sass/style.scss */
   .servicesContainer {
     width: 90vw;
   }
 }
 @media (max-width: 700px) {
-  /* line 185, ../sass/style.scss */
+  /* line 187, ../sass/style.scss */
   .servicesContainer {
     text-align: left;
   }
 }
 
-/* line 196, ../sass/style.scss */
+/* line 198, ../sass/style.scss */
 .circle {
   -moz-border-radius: 25vh;
   -webkit-border-radius: 25vh;
@@ -303,7 +304,7 @@ strong {
   height: 14vw;
 }
 @media (max-width: 700px) {
-  /* line 196, ../sass/style.scss */
+  /* line 198, ../sass/style.scss */
   .circle {
     width: 12vh;
     height: 12vh;
@@ -313,27 +314,27 @@ strong {
   }
 }
 
-/* line 209, ../sass/style.scss */
+/* line 211, ../sass/style.scss */
 .service1 {
   background: #D83454 url("../images/service1.png") no-repeat center/44%;
 }
 
-/* line 212, ../sass/style.scss */
+/* line 214, ../sass/style.scss */
 .service2 {
   background: #D83454 url("../images/service2.png") no-repeat center/44%;
 }
 
-/* line 215, ../sass/style.scss */
+/* line 217, ../sass/style.scss */
 .service3 {
   background: #D83454 url("../images/service3.png") no-repeat center/44%;
 }
 
-/* line 218, ../sass/style.scss */
+/* line 220, ../sass/style.scss */
 .service4 {
   background: #D83454 url("../images/service4.png") no-repeat center/44%;
 }
 
-/* line 222, ../sass/style.scss */
+/* line 224, ../sass/style.scss */
 .circleSubtitle {
   color: #434244;
   font-size: 2rem;
@@ -343,7 +344,7 @@ strong {
   margin-top: 5rem;
 }
 @media (max-width: 700px) {
-  /* line 222, ../sass/style.scss */
+  /* line 224, ../sass/style.scss */
   .circleSubtitle {
     margin-top: 2rem;
     display: inline-block;
@@ -352,7 +353,7 @@ strong {
   }
 }
 @media (max-width: 360px) {
-  /* line 222, ../sass/style.scss */
+  /* line 224, ../sass/style.scss */
   .circleSubtitle {
     margin-left: 0.5rem;
     color: #434244;
@@ -361,7 +362,7 @@ strong {
   }
 }
 
-/* line 237, ../sass/style.scss */
+/* line 239, ../sass/style.scss */
 .client {
   -webkit-filter: grayscale(100%) brightness(60%);
   filter: grayscale(100%) brightness(60%);
@@ -371,45 +372,45 @@ strong {
   height: 18.5rem;
   cursor: pointer;
 }
-/* line 243, ../sass/style.scss */
+/* line 245, ../sass/style.scss */
 .client:hover {
   -webkit-filter: grayscale(0%) brightness(100%);
   filter: grayscale(0%) brightness(100%);
 }
 
-/* line 248, ../sass/style.scss */
+/* line 250, ../sass/style.scss */
 .client1 {
   background: url("../images/client1.png") no-repeat center/100%;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
 }
-/* line 251, ../sass/style.scss */
+/* line 253, ../sass/style.scss */
 .client1:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 255, ../sass/style.scss */
+/* line 257, ../sass/style.scss */
 .client2 {
   background: url("../images/client2.png") no-repeat center/100%;
 }
 
-/* line 258, ../sass/style.scss */
+/* line 260, ../sass/style.scss */
 .client3 {
   background: url("../images/client3.png") no-repeat center/80%;
 }
 
-/* line 261, ../sass/style.scss */
+/* line 263, ../sass/style.scss */
 .client4 {
   background: url("../images/logo.png") no-repeat center/100%;
 }
 
-/* line 265, ../sass/style.scss */
+/* line 267, ../sass/style.scss */
 .owl-wrapper-outer {
   z-index: 20;
 }
 
-/* line 268, ../sass/style.scss */
+/* line 270, ../sass/style.scss */
 .owl-buttons {
   position: absolute !important;
   top: 5.5rem !important;
@@ -418,27 +419,27 @@ strong {
   padding-right: 3vw;
 }
 @media (max-width: 1100px) {
-  /* line 268, ../sass/style.scss */
+  /* line 270, ../sass/style.scss */
   .owl-buttons {
     padding-left: 1.5vw;
     padding-right: 1.5vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 268, ../sass/style.scss */
+  /* line 270, ../sass/style.scss */
   .owl-buttons {
     padding-left: 0vw;
     padding-right: 0vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 268, ../sass/style.scss */
+  /* line 270, ../sass/style.scss */
   .owl-buttons {
     display: none;
   }
 }
 
-/* line 287, ../sass/style.scss */
+/* line 289, ../sass/style.scss */
 .owl-prev, .owl-next {
   font-size: 4rem !important;
   font-weight: 600 !important;
@@ -449,7 +450,74 @@ strong {
   float: left;
 }
 
-/* line 297, ../sass/style.scss */
+/* line 299, ../sass/style.scss */
 .owl-next {
   float: right;
+}
+
+/* line 304, ../sass/style.scss */
+#mapTitle:before {
+  content: "How to find us";
+}
+@media (max-width: 590px) {
+  /* line 304, ../sass/style.scss */
+  #mapTitle:before {
+    content: "Find us";
+  }
+}
+
+/* line 311, ../sass/style.scss */
+.map-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 55vh;
+}
+
+/* line 317, ../sass/style.scss */
+.map-container:before, .map-container:after, #map:before, #map:after {
+  position: absolute;
+  display: block;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  content: '';
+  z-index: 5;
+}
+
+/* line 324, ../sass/style.scss */
+.map-container:before {
+  top: -5px;
+  left: 0;
+  right: 0;
+  height: 5px;
+}
+
+/* line 330, ../sass/style.scss */
+.map-container:after {
+  right: -5px;
+  top: 0;
+  bottom: 0;
+  width: 5px;
+}
+
+/* line 336, ../sass/style.scss */
+#map:before {
+  bottom: -5px;
+  left: 0;
+  right: 0;
+  height: 5px;
+}
+
+/* line 342, ../sass/style.scss */
+#map:after {
+  left: -5px;
+  top: 0;
+  bottom: 0;
+  width: 5px;
+}
+
+/* line 349, ../sass/style.scss */
+#map {
+  width: inherit;
+  height: inherit;
+  background-color: #CCC;
 }
