--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -3,6 +3,20 @@
   height: 100vh;
 }
 
+@mixin formSize(){
+  width:21em;  
+  height: 5.5rem;
+  @include media("<=large"){
+    width:50vw;
+  }
+  @include media("<=small"){
+    width:70vw;
+  }
+  @include media("<=very-small"){
+    width:85vw;
+  }
+}
+
 @mixin ieCenterer(){
   margin-left: auto;
   margin-right: auto;
