--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -30,83 +30,84 @@
   vertical-align: bottom;
   height: 75vh;
 }
-/* line 26, ../sass/style.scss */
+/* line 27, ../sass/style.scss */
 .firstType .sectionBottom {
   margin-top: 10vh;
 }
 @media (max-width: 900px) {
-  /* line 26, ../sass/style.scss */
+  /* line 27, ../sass/style.scss */
   .firstType .sectionBottom {
     margin-top: 8vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 26, ../sass/style.scss */
+  /* line 27, ../sass/style.scss */
   .firstType .sectionBottom {
     margin-top: 6vh;
   }
 }
 
-/* line 37, ../sass/style.scss */
+/* line 38, ../sass/style.scss */
 .secondType {
   background-color: #F1F2F2;
   height: 100vh;
 }
-/* line 39, ../sass/style.scss */
+/* line 40, ../sass/style.scss */
 .secondType .sectionTop {
   height: 75vh;
 }
 @media (max-width: 1100px) {
-  /* line 39, ../sass/style.scss */
+  /* line 40, ../sass/style.scss */
   .secondType .sectionTop {
     height: 70vh;
   }
 }
 @media (max-width: 900px) {
-  /* line 39, ../sass/style.scss */
+  /* line 40, ../sass/style.scss */
   .secondType .sectionTop {
     height: 65vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 39, ../sass/style.scss */
+  /* line 40, ../sass/style.scss */
   .secondType .sectionTop {
     height: 60vh;
   }
 }
 @media (max-width: 590px) {
-  /* line 39, ../sass/style.scss */
+  /* line 40, ../sass/style.scss */
   .secondType .sectionTop {
     height: 55vh;
   }
 }
 
-/* line 57, ../sass/style.scss */
+/* line 58, ../sass/style.scss */
 .thirdType, .fourthType {
   background-color: #FFF;
   height: 100vh;
+  min-height: 50rem;
 }
-/* line 59, ../sass/style.scss */
+/* line 61, ../sass/style.scss */
 .thirdType .sectionTop, .fourthType .sectionTop {
   height: 75vh;
 }
-/* line 62, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 .thirdType .sectionBottom, .fourthType .sectionBottom {
   margin-top: 7rem;
 }
 
-/* line 67, ../sass/style.scss */
+/* line 70, ../sass/style.scss */
 .fourthType {
   background-color: #F1F2F2;
   height: 100vh;
 }
 
-/* line 72, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .imageCenter {
   width: 40vh;
 }
 
-/* line 76, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
 .logoSubtitle {
   color: #F1F2F2;
   font-size: 2rem;
@@ -118,41 +119,41 @@
   margin-right: 30vw;
 }
 @media (max-width: 1100px) {
-  /* line 76, ../sass/style.scss */
+  /* line 80, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 25vw;
     margin-right: 25vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 76, ../sass/style.scss */
+  /* line 80, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 20vw;
     margin-right: 20vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 76, ../sass/style.scss */
+  /* line 80, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 15vw;
     margin-right: 15vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 76, ../sass/style.scss */
+  /* line 80, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 8vw;
     margin-right: 8vw;
   }
 }
 
-/* line 101, ../sass/style.scss */
+/* line 105, ../sass/style.scss */
 .drawing {
   width: 75vh;
   margin-top: 9vw;
 }
 @media (max-width: 1100px) and (orientation: portrait) {
-  /* line 101, ../sass/style.scss */
+  /* line 105, ../sass/style.scss */
   .drawing {
     width: 35vh;
     margin-top: 11vw;
@@ -160,7 +161,7 @@
 }
 
 @media (max-width: 900px) and (orientation: portrait) {
-  /* line 101, ../sass/style.scss */
+  /* line 105, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 13vw;
@@ -168,7 +169,7 @@
 }
 
 @media (max-width: 740px) and (orientation: portrait) {
-  /* line 101, ../sass/style.scss */
+  /* line 105, ../sass/style.scss */
   .drawing {
     width: 60vh;
     margin-top: 15vw;
@@ -176,14 +177,14 @@
 }
 
 @media (max-width: 590px) and (orientation: portrait) {
-  /* line 101, ../sass/style.scss */
+  /* line 105, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 17vw;
   }
 }
 
-/* line 122, ../sass/style.scss */
+/* line 126, ../sass/style.scss */
 .drawingSubtitle {
   color: #434244;
   font-size: 2.9rem;
@@ -193,21 +194,20 @@
   margin-right: 10vw;
 }
 
-/* line 129, ../sass/style.scss */
+/* line 133, ../sass/style.scss */
 strong {
   font-weight: normal;
   color: #D83454;
 }
 
-/* line 134, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 .scrollButton {
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
   border-radius: 25px;
   margin-left: auto;
   margin-right: auto;
-  background: url("../images/arrowDown.png") no-repeat center;
-  background-size: 35%;
+  background: url("../images/arrowDown.png") no-repeat center/35%;
   width: 5rem;
   height: 5rem;
   border-style: solid;
@@ -218,14 +218,14 @@ strong {
   -webkit-box-shadow: #434244 1px 1px 20px -5px;
   box-shadow: #434244 1px 1px 20px -5px;
 }
-/* line 146, ../sass/style.scss */
+/* line 149, ../sass/style.scss */
 .scrollButton:active {
   -moz-box-shadow: #434244 0px 0px 0px;
   -webkit-box-shadow: #434244 0px 0px 0px;
   box-shadow: #434244 0px 0px 0px;
 }
 
-/* line 151, ../sass/style.scss */
+/* line 154, ../sass/style.scss */
 .redButton {
   background-color: #D83454;
   border-width: 3px;
@@ -234,20 +234,21 @@ strong {
   margin-top: 5vh;
 }
 @media (max-width: 900px) {
-  /* line 151, ../sass/style.scss */
+  /* line 154, ../sass/style.scss */
   .redButton {
     margin-top: 6vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 151, ../sass/style.scss */
+  /* line 154, ../sass/style.scss */
   .redButton {
     margin-top: 11vh;
   }
 }
 
-/* line 165, ../sass/style.scss */
+/* line 168, ../sass/style.scss */
 .blackButton {
+  background: url("../images/arrowDownBlack.png") no-repeat center/35%;
   border-color: #434244;
   border-width: 2.5px;
   width: 4.8rem;
@@ -255,47 +256,54 @@ strong {
   margin-top: 5vh;
 }
 
-/* line 173, ../sass/style.scss */
-.titleWithMargin, .titleWithoutMargin {
+/* line 177, ../sass/style.scss */
+.titleWithMargin, .titleWithMargin.clients, .titleWithoutMargin {
   color: #434244;
-  font-size: 6.3rem;
+  font-size: 9.7vh;
   font-weight: 400;
   margin-top: 0;
   padding-top: 4rem;
   margin-bottom: 10.5rem;
 }
 @media (max-width: 700px) {
-  /* line 173, ../sass/style.scss */
-  .titleWithMargin, .titleWithoutMargin {
+  /* line 177, ../sass/style.scss */
+  .titleWithMargin, .titleWithMargin.clients, .titleWithoutMargin {
     margin-bottom: 3rem;
   }
 }
 
-/* line 182, ../sass/style.scss */
+@media (max-width: 700px) {
+  /* line 187, ../sass/style.scss */
+  .titleWithMargin.clients, .clients.titleWithoutMargin {
+    margin-bottom: 10.5rem;
+  }
+}
+
+/* line 194, ../sass/style.scss */
 .titleWithoutMargin {
   margin-bottom: 3rem;
 }
 
-/* line 187, ../sass/style.scss */
+/* line 199, ../sass/style.scss */
 .servicesContainer {
   margin-left: auto;
   margin-right: auto;
   width: 77vw;
 }
 @media (max-width: 993px) {
-  /* line 187, ../sass/style.scss */
+  /* line 199, ../sass/style.scss */
   .servicesContainer {
     width: 90vw;
   }
 }
 @media (max-width: 700px) {
-  /* line 187, ../sass/style.scss */
+  /* line 199, ../sass/style.scss */
   .servicesContainer {
     text-align: left;
   }
 }
 
-/* line 198, ../sass/style.scss */
+/* line 210, ../sass/style.scss */
 .circle {
   -moz-border-radius: 25vh;
   -webkit-border-radius: 25vh;
@@ -304,7 +312,7 @@ strong {
   height: 14vw;
 }
 @media (max-width: 700px) {
-  /* line 198, ../sass/style.scss */
+  /* line 210, ../sass/style.scss */
   .circle {
     width: 12vh;
     height: 12vh;
@@ -314,27 +322,27 @@ strong {
   }
 }
 
-/* line 211, ../sass/style.scss */
+/* line 223, ../sass/style.scss */
 .service1 {
   background: #D83454 url("../images/service1.png") no-repeat center/44%;
 }
 
-/* line 214, ../sass/style.scss */
+/* line 226, ../sass/style.scss */
 .service2 {
   background: #D83454 url("../images/service2.png") no-repeat center/44%;
 }
 
-/* line 217, ../sass/style.scss */
+/* line 229, ../sass/style.scss */
 .service3 {
   background: #D83454 url("../images/service3.png") no-repeat center/44%;
 }
 
-/* line 220, ../sass/style.scss */
+/* line 232, ../sass/style.scss */
 .service4 {
   background: #D83454 url("../images/service4.png") no-repeat center/44%;
 }
 
-/* line 224, ../sass/style.scss */
+/* line 236, ../sass/style.scss */
 .circleSubtitle {
   color: #434244;
   font-size: 2rem;
@@ -344,7 +352,7 @@ strong {
   margin-top: 5rem;
 }
 @media (max-width: 700px) {
-  /* line 224, ../sass/style.scss */
+  /* line 236, ../sass/style.scss */
   .circleSubtitle {
     margin-top: 2rem;
     display: inline-block;
@@ -353,7 +361,7 @@ strong {
   }
 }
 @media (max-width: 360px) {
-  /* line 224, ../sass/style.scss */
+  /* line 236, ../sass/style.scss */
   .circleSubtitle {
     margin-left: 0.5rem;
     color: #434244;
@@ -362,7 +370,7 @@ strong {
   }
 }
 
-/* line 239, ../sass/style.scss */
+/* line 251, ../sass/style.scss */
 .client {
   -webkit-filter: grayscale(100%) brightness(60%);
   filter: grayscale(100%) brightness(60%);
@@ -372,45 +380,45 @@ strong {
   height: 18.5rem;
   cursor: pointer;
 }
-/* line 245, ../sass/style.scss */
+/* line 257, ../sass/style.scss */
 .client:hover {
   -webkit-filter: grayscale(0%) brightness(100%);
   filter: grayscale(0%) brightness(100%);
 }
 
-/* line 250, ../sass/style.scss */
+/* line 262, ../sass/style.scss */
 .client1 {
   background: url("../images/client1.png") no-repeat center/100%;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
 }
-/* line 253, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 .client1:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 257, ../sass/style.scss */
+/* line 269, ../sass/style.scss */
 .client2 {
   background: url("../images/client2.png") no-repeat center/100%;
 }
 
-/* line 260, ../sass/style.scss */
+/* line 272, ../sass/style.scss */
 .client3 {
   background: url("../images/client3.png") no-repeat center/80%;
 }
 
-/* line 263, ../sass/style.scss */
+/* line 275, ../sass/style.scss */
 .client4 {
   background: url("../images/logo.png") no-repeat center/100%;
 }
 
-/* line 267, ../sass/style.scss */
+/* line 279, ../sass/style.scss */
 .owl-wrapper-outer {
   z-index: 20;
 }
 
-/* line 270, ../sass/style.scss */
+/* line 282, ../sass/style.scss */
 .owl-buttons {
   position: absolute !important;
   top: 5.5rem !important;
@@ -419,27 +427,27 @@ strong {
   padding-right: 3vw;
 }
 @media (max-width: 1100px) {
-  /* line 270, ../sass/style.scss */
+  /* line 282, ../sass/style.scss */
   .owl-buttons {
     padding-left: 1.5vw;
     padding-right: 1.5vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 270, ../sass/style.scss */
+  /* line 282, ../sass/style.scss */
   .owl-buttons {
     padding-left: 0vw;
     padding-right: 0vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 270, ../sass/style.scss */
+  /* line 282, ../sass/style.scss */
   .owl-buttons {
     display: none;
   }
 }
 
-/* line 289, ../sass/style.scss */
+/* line 301, ../sass/style.scss */
 .owl-prev, .owl-next {
   font-size: 4rem !important;
   font-weight: 600 !important;
@@ -450,23 +458,23 @@ strong {
   float: left;
 }
 
-/* line 299, ../sass/style.scss */
+/* line 311, ../sass/style.scss */
 .owl-next {
   float: right;
 }
 
-/* line 304, ../sass/style.scss */
+/* line 316, ../sass/style.scss */
 #mapTitle:before {
   content: "How to find us";
 }
 @media (max-width: 590px) {
-  /* line 304, ../sass/style.scss */
+  /* line 316, ../sass/style.scss */
   #mapTitle:before {
     content: "Find us";
   }
 }
 
-/* line 311, ../sass/style.scss */
+/* line 323, ../sass/style.scss */
 .map-container {
   position: relative;
   overflow: hidden;
@@ -474,7 +482,7 @@ strong {
   height: 55vh;
 }
 
-/* line 317, ../sass/style.scss */
+/* line 329, ../sass/style.scss */
 .map-container:before, .map-container:after, #map:before, #map:after {
   position: absolute;
   display: block;
@@ -483,7 +491,7 @@ strong {
   z-index: 5;
 }
 
-/* line 324, ../sass/style.scss */
+/* line 336, ../sass/style.scss */
 .map-container:before {
   top: -5px;
   left: 0;
@@ -491,7 +499,7 @@ strong {
   height: 5px;
 }
 
-/* line 330, ../sass/style.scss */
+/* line 342, ../sass/style.scss */
 .map-container:after {
   right: -5px;
   top: 0;
@@ -499,7 +507,7 @@ strong {
   width: 5px;
 }
 
-/* line 336, ../sass/style.scss */
+/* line 348, ../sass/style.scss */
 #map:before {
   bottom: -5px;
   left: 0;
@@ -507,7 +515,7 @@ strong {
   height: 5px;
 }
 
-/* line 342, ../sass/style.scss */
+/* line 354, ../sass/style.scss */
 #map:after {
   left: -5px;
   top: 0;
@@ -515,9 +523,99 @@ strong {
   width: 5px;
 }
 
-/* line 349, ../sass/style.scss */
+/* line 361, ../sass/style.scss */
 #map {
   width: inherit;
   height: inherit;
   background-color: #CCC;
+}
+
+/* line 367, ../sass/style.scss */
+.inputText, .inputTextArea {
+  width: 21em;
+  height: 5.5rem;
+  border: solid 2px #c9cdcd;
+  background-color: #fcfcfc;
+  color: #434244;
+  font-size: 2rem;
+  font-weight: 500;
+}
+@media (max-width: 1100px) {
+  /* line 367, ../sass/style.scss */
+  .inputText, .inputTextArea {
+    width: 50vw;
+  }
+}
+@media (max-width: 740px) {
+  /* line 367, ../sass/style.scss */
+  .inputText, .inputTextArea {
+    width: 70vw;
+  }
+}
+@media (max-width: 590px) {
+  /* line 367, ../sass/style.scss */
+  .inputText, .inputTextArea {
+    width: 85vw;
+  }
+}
+/* line 61, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+.inputText:-moz-placeholder, .inputTextArea:-moz-placeholder {
+  color: #CBCBCB;
+  font-size: 2rem;
+  font-weight: 400;
+}
+/* line 64, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+.inputText::-moz-placeholder, .inputTextArea::-moz-placeholder {
+  color: #CBCBCB;
+  font-size: 2rem;
+  font-weight: 400;
+}
+/* line 67, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+.inputText:-ms-input-placeholder, .inputTextArea:-ms-input-placeholder {
+  color: #CBCBCB;
+  font-size: 2rem;
+  font-weight: 400;
+}
+/* line 56, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+.inputText::-webkit-input-placeholder, .inputTextArea::-webkit-input-placeholder {
+  color: #CBCBCB;
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+/* line 377, ../sass/style.scss */
+input:focus {
+  text-decoration: none !important;
+}
+
+/* line 381, ../sass/style.scss */
+.submitButton {
+  color: #F1F2F2;
+  font-size: 2rem;
+  font-weight: 400;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 21em;
+  height: 5.5rem;
+  background-color: #D83454;
+  border: none;
+}
+@media (max-width: 1100px) {
+  /* line 381, ../sass/style.scss */
+  .submitButton {
+    width: 50vw;
+  }
+}
+@media (max-width: 740px) {
+  /* line 381, ../sass/style.scss */
+  .submitButton {
+    width: 70vw;
+  }
+}
+@media (max-width: 590px) {
+  /* line 381, ../sass/style.scss */
+  .submitButton {
+    width: 85vw;
+  }
 }
