--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -534,6 +534,8 @@ strong {
 .inputText, .inputTextArea {
   width: 21em;
   height: 5.5rem;
+  margin-left: auto;
+  margin-right: auto;
   border: solid 2px #c9cdcd;
   background-color: #fcfcfc;
   color: #434244;
@@ -583,12 +585,12 @@ strong {
   font-weight: 400;
 }
 
-/* line 373, ../sass/style.scss */
+/* line 374, ../sass/style.scss */
 input:focus {
   text-decoration: none !important;
 }
 
-/* line 377, ../sass/style.scss */
+/* line 378, ../sass/style.scss */
 .submitButton {
   color: #F1F2F2;
   font-size: 2rem;
@@ -602,19 +604,19 @@ input:focus {
   border: none;
 }
 @media (max-width: 1100px) {
-  /* line 377, ../sass/style.scss */
+  /* line 378, ../sass/style.scss */
   .submitButton {
     width: 50vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 377, ../sass/style.scss */
+  /* line 378, ../sass/style.scss */
   .submitButton {
     width: 70vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 377, ../sass/style.scss */
+  /* line 378, ../sass/style.scss */
   .submitButton {
     width: 85vw;
   }
