--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -259,7 +259,7 @@ strong {
 /* line 173, ../sass/style.scss */
 .titleWithMargin, .titleWithMargin.clients, .titleWithoutMargin {
   color: #434244;
-  font-size: 9.7vh;
+  font-size: 6.2rem;
   font-weight: 400;
   margin-top: 0;
   padding-top: 4rem;
