--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8,7 +8,12 @@
   user-select: none;
 }
 
-/* line 16, ../sass/style.scss */
+/* line 13, ../sass/style.scss */
+.section, .sectionTop, .sectionBottom, .imageCenter, .logoSubtitle, .drawing, .redButton, .blackButton, .circle, .map-container {
+  transition: height 999999s,  margin-top 999999s,  width 999999s,  margin-left 999999s,  margin-right 999999s, margin-bottom 999999s;
+}
+
+/* line 23, ../sass/style.scss */
 .section {
   text-align: center;
   text-align: -moz-center;
@@ -17,97 +22,97 @@
   margin-right: auto;
 }
 
-/* line 20, ../sass/style.scss */
+/* line 27, ../sass/style.scss */
 .firstType {
   background-color: #D83454;
   height: 100vh;
   width: 100vw;
   display: table-cell;
 }
-/* line 24, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
 .firstType .sectionTop {
   display: table-cell;
   vertical-align: bottom;
   height: 75vh;
 }
-/* line 29, ../sass/style.scss */
+/* line 36, ../sass/style.scss */
 .firstType .sectionBottom {
   margin-top: 10vh;
 }
 @media (max-width: 900px) {
-  /* line 29, ../sass/style.scss */
+  /* line 36, ../sass/style.scss */
   .firstType .sectionBottom {
     margin-top: 8vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 29, ../sass/style.scss */
+  /* line 36, ../sass/style.scss */
   .firstType .sectionBottom {
     margin-top: 6vh;
   }
 }
 
-/* line 40, ../sass/style.scss */
+/* line 47, ../sass/style.scss */
 .secondType {
   background-color: #F1F2F2;
   height: 100vh;
 }
-/* line 42, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
 .secondType .sectionTop {
   height: 75vh;
 }
 @media (max-width: 1100px) {
-  /* line 42, ../sass/style.scss */
+  /* line 49, ../sass/style.scss */
   .secondType .sectionTop {
     height: 70vh;
   }
 }
 @media (max-width: 900px) {
-  /* line 42, ../sass/style.scss */
+  /* line 49, ../sass/style.scss */
   .secondType .sectionTop {
     height: 65vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 42, ../sass/style.scss */
+  /* line 49, ../sass/style.scss */
   .secondType .sectionTop {
     height: 60vh;
   }
 }
 @media (max-width: 590px) {
-  /* line 42, ../sass/style.scss */
+  /* line 49, ../sass/style.scss */
   .secondType .sectionTop {
     height: 55vh;
   }
 }
 
-/* line 60, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 .thirdType, .fourthType {
   background-color: #FFF;
   height: 100vh;
   min-height: 50rem;
 }
-/* line 63, ../sass/style.scss */
+/* line 70, ../sass/style.scss */
 .thirdType .sectionTop, .fourthType .sectionTop {
   height: 75vh;
 }
-/* line 66, ../sass/style.scss */
+/* line 73, ../sass/style.scss */
 .thirdType .sectionBottom, .fourthType .sectionBottom {
   margin-top: 7rem;
 }
 
-/* line 71, ../sass/style.scss */
+/* line 78, ../sass/style.scss */
 .fourthType {
   background-color: #F1F2F2;
   height: 100vh;
 }
 
-/* line 76, ../sass/style.scss */
+/* line 83, ../sass/style.scss */
 .imageCenter {
   width: 40vh;
 }
 
-/* line 80, ../sass/style.scss */
+/* line 87, ../sass/style.scss */
 .logoSubtitle {
   color: #F1F2F2;
   font-size: 2rem;
@@ -119,41 +124,41 @@
   margin-right: 30vw;
 }
 @media (max-width: 1100px) {
-  /* line 80, ../sass/style.scss */
+  /* line 87, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 25vw;
     margin-right: 25vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 80, ../sass/style.scss */
+  /* line 87, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 20vw;
     margin-right: 20vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 80, ../sass/style.scss */
+  /* line 87, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 15vw;
     margin-right: 15vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 80, ../sass/style.scss */
+  /* line 87, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 8vw;
     margin-right: 8vw;
   }
 }
 
-/* line 105, ../sass/style.scss */
+/* line 112, ../sass/style.scss */
 .drawing {
   width: 75vh;
   margin-top: 9vw;
 }
 @media (max-width: 1100px) and (orientation: portrait) {
-  /* line 105, ../sass/style.scss */
+  /* line 112, ../sass/style.scss */
   .drawing {
     width: 35vh;
     margin-top: 11vw;
@@ -161,7 +166,7 @@
 }
 
 @media (max-width: 900px) and (orientation: portrait) {
-  /* line 105, ../sass/style.scss */
+  /* line 112, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 13vw;
@@ -169,7 +174,7 @@
 }
 
 @media (max-width: 740px) and (orientation: portrait) {
-  /* line 105, ../sass/style.scss */
+  /* line 112, ../sass/style.scss */
   .drawing {
     width: 60vh;
     margin-top: 15vw;
@@ -177,14 +182,14 @@
 }
 
 @media (max-width: 590px) and (orientation: portrait) {
-  /* line 105, ../sass/style.scss */
+  /* line 112, ../sass/style.scss */
   .drawing {
     width: 40vh;
     margin-top: 17vw;
   }
 }
 
-/* line 126, ../sass/style.scss */
+/* line 133, ../sass/style.scss */
 .drawingSubtitle {
   color: #434244;
   font-size: 2.9rem;
@@ -194,13 +199,13 @@
   margin-right: 10vw;
 }
 
-/* line 133, ../sass/style.scss */
+/* line 140, ../sass/style.scss */
 strong {
   font-weight: normal;
   color: #D83454;
 }
 
-/* line 138, ../sass/style.scss */
+/* line 145, ../sass/style.scss */
 .scrollButton {
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -218,14 +223,14 @@ strong {
   -webkit-box-shadow: #434244 1px 1px 20px -5px;
   box-shadow: #434244 1px 1px 20px -5px;
 }
-/* line 149, ../sass/style.scss */
+/* line 156, ../sass/style.scss */
 .scrollButton:active {
   -moz-box-shadow: #434244 0px 0px 0px;
   -webkit-box-shadow: #434244 0px 0px 0px;
   box-shadow: #434244 0px 0px 0px;
 }
 
-/* line 154, ../sass/style.scss */
+/* line 161, ../sass/style.scss */
 .redButton {
   background-color: #D83454;
   border-width: 3px;
@@ -234,19 +239,19 @@ strong {
   margin-top: 5vh;
 }
 @media (max-width: 900px) {
-  /* line 154, ../sass/style.scss */
+  /* line 161, ../sass/style.scss */
   .redButton {
     margin-top: 6vh;
   }
 }
 @media (max-width: 740px) {
-  /* line 154, ../sass/style.scss */
+  /* line 161, ../sass/style.scss */
   .redButton {
     margin-top: 11vh;
   }
 }
 
-/* line 168, ../sass/style.scss */
+/* line 175, ../sass/style.scss */
 .blackButton {
   background: url("../images/arrowDownBlack.png") no-repeat center/35%;
   border-color: #434244;
@@ -256,7 +261,7 @@ strong {
   margin-top: 5vh;
 }
 
-/* line 177, ../sass/style.scss */
+/* line 184, ../sass/style.scss */
 .titleWithMargin, .titleWithMargin.clients, .titleWithoutMargin {
   color: #434244;
   font-size: 6.2rem;
@@ -266,44 +271,44 @@ strong {
   margin-bottom: 10.5rem;
 }
 @media (max-width: 700px) {
-  /* line 177, ../sass/style.scss */
+  /* line 184, ../sass/style.scss */
   .titleWithMargin, .titleWithMargin.clients, .titleWithoutMargin {
     margin-bottom: 3rem;
   }
 }
 
 @media (max-width: 700px) {
-  /* line 187, ../sass/style.scss */
+  /* line 194, ../sass/style.scss */
   .titleWithMargin.clients, .clients.titleWithoutMargin {
     margin-bottom: 10.5rem;
   }
 }
 
-/* line 194, ../sass/style.scss */
+/* line 201, ../sass/style.scss */
 .titleWithoutMargin {
   margin-bottom: 3rem;
 }
 
-/* line 199, ../sass/style.scss */
+/* line 206, ../sass/style.scss */
 .servicesContainer {
   margin-left: auto;
   margin-right: auto;
   width: 77vw;
 }
 @media (max-width: 993px) {
-  /* line 199, ../sass/style.scss */
+  /* line 206, ../sass/style.scss */
   .servicesContainer {
     width: 90vw;
   }
 }
 @media (max-width: 700px) {
-  /* line 199, ../sass/style.scss */
+  /* line 206, ../sass/style.scss */
   .servicesContainer {
     text-align: left;
   }
 }
 
-/* line 210, ../sass/style.scss */
+/* line 217, ../sass/style.scss */
 .circle {
   -moz-border-radius: 25vh;
   -webkit-border-radius: 25vh;
@@ -312,7 +317,7 @@ strong {
   height: 14vw;
 }
 @media (max-width: 700px) {
-  /* line 210, ../sass/style.scss */
+  /* line 217, ../sass/style.scss */
   .circle {
     width: 12vh;
     height: 12vh;
@@ -322,27 +327,27 @@ strong {
   }
 }
 
-/* line 223, ../sass/style.scss */
+/* line 230, ../sass/style.scss */
 .service1 {
   background: #D83454 url("../images/service1.png") no-repeat center/44%;
 }
 
-/* line 226, ../sass/style.scss */
+/* line 233, ../sass/style.scss */
 .service2 {
   background: #D83454 url("../images/service2.png") no-repeat center/44%;
 }
 
-/* line 229, ../sass/style.scss */
+/* line 236, ../sass/style.scss */
 .service3 {
   background: #D83454 url("../images/service3.png") no-repeat center/44%;
 }
 
-/* line 232, ../sass/style.scss */
+/* line 239, ../sass/style.scss */
 .service4 {
   background: #D83454 url("../images/service4.png") no-repeat center/44%;
 }
 
-/* line 236, ../sass/style.scss */
+/* line 243, ../sass/style.scss */
 .circleSubtitle {
   color: #434244;
   font-size: 2rem;
@@ -352,7 +357,7 @@ strong {
   margin-top: 5rem;
 }
 @media (max-width: 700px) {
-  /* line 236, ../sass/style.scss */
+  /* line 243, ../sass/style.scss */
   .circleSubtitle {
     margin-top: 2rem;
     display: inline-block;
@@ -361,7 +366,7 @@ strong {
   }
 }
 @media (max-width: 360px) {
-  /* line 236, ../sass/style.scss */
+  /* line 243, ../sass/style.scss */
   .circleSubtitle {
     margin-left: 0.5rem;
     color: #434244;
@@ -370,7 +375,7 @@ strong {
   }
 }
 
-/* line 251, ../sass/style.scss */
+/* line 258, ../sass/style.scss */
 .client {
   -webkit-filter: grayscale(100%) brightness(60%);
   filter: grayscale(100%) brightness(60%);
@@ -380,45 +385,45 @@ strong {
   height: 18.5rem;
   cursor: pointer;
 }
-/* line 257, ../sass/style.scss */
+/* line 264, ../sass/style.scss */
 .client:hover {
   -webkit-filter: grayscale(0%) brightness(100%);
   filter: grayscale(0%) brightness(100%);
 }
 
-/* line 262, ../sass/style.scss */
+/* line 269, ../sass/style.scss */
 .client1 {
   background: url("../images/client1.png") no-repeat center/100%;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
 }
-/* line 265, ../sass/style.scss */
+/* line 272, ../sass/style.scss */
 .client1:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 269, ../sass/style.scss */
+/* line 276, ../sass/style.scss */
 .client2 {
   background: url("../images/client2.png") no-repeat center/100%;
 }
 
-/* line 272, ../sass/style.scss */
+/* line 279, ../sass/style.scss */
 .client3 {
   background: url("../images/client3.png") no-repeat center/80%;
 }
 
-/* line 275, ../sass/style.scss */
+/* line 282, ../sass/style.scss */
 .client4 {
   background: url("../images/logo.png") no-repeat center/100%;
 }
 
-/* line 279, ../sass/style.scss */
+/* line 286, ../sass/style.scss */
 .owl-wrapper-outer {
   z-index: 20;
 }
 
-/* line 282, ../sass/style.scss */
+/* line 289, ../sass/style.scss */
 .owl-buttons {
   position: absolute !important;
   top: 5.5rem !important;
@@ -427,27 +432,27 @@ strong {
   padding-right: 3vw;
 }
 @media (max-width: 1100px) {
-  /* line 282, ../sass/style.scss */
+  /* line 289, ../sass/style.scss */
   .owl-buttons {
     padding-left: 1.5vw;
     padding-right: 1.5vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 282, ../sass/style.scss */
+  /* line 289, ../sass/style.scss */
   .owl-buttons {
     padding-left: 0vw;
     padding-right: 0vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 282, ../sass/style.scss */
+  /* line 289, ../sass/style.scss */
   .owl-buttons {
     display: none;
   }
 }
 
-/* line 301, ../sass/style.scss */
+/* line 308, ../sass/style.scss */
 .owl-prev, .owl-next {
   font-size: 4rem !important;
   font-weight: 600 !important;
@@ -458,23 +463,23 @@ strong {
   float: left;
 }
 
-/* line 311, ../sass/style.scss */
+/* line 318, ../sass/style.scss */
 .owl-next {
   float: right;
 }
 
-/* line 316, ../sass/style.scss */
+/* line 323, ../sass/style.scss */
 #mapTitle:before {
   content: "How to find us";
 }
 @media (max-width: 590px) {
-  /* line 316, ../sass/style.scss */
+  /* line 323, ../sass/style.scss */
   #mapTitle:before {
     content: "Find us";
   }
 }
 
-/* line 323, ../sass/style.scss */
+/* line 330, ../sass/style.scss */
 .map-container {
   position: relative;
   overflow: hidden;
@@ -482,7 +487,7 @@ strong {
   height: 55vh;
 }
 
-/* line 329, ../sass/style.scss */
+/* line 336, ../sass/style.scss */
 .map-container:before, .map-container:after, #map:before, #map:after {
   position: absolute;
   display: block;
@@ -491,7 +496,7 @@ strong {
   z-index: 5;
 }
 
-/* line 336, ../sass/style.scss */
+/* line 343, ../sass/style.scss */
 .map-container:before {
   top: -5px;
   left: 0;
@@ -499,7 +504,7 @@ strong {
   height: 5px;
 }
 
-/* line 342, ../sass/style.scss */
+/* line 349, ../sass/style.scss */
 .map-container:after {
   right: -5px;
   top: 0;
@@ -507,7 +512,7 @@ strong {
   width: 5px;
 }
 
-/* line 348, ../sass/style.scss */
+/* line 355, ../sass/style.scss */
 #map:before {
   bottom: -5px;
   left: 0;
@@ -515,7 +520,7 @@ strong {
   height: 5px;
 }
 
-/* line 354, ../sass/style.scss */
+/* line 361, ../sass/style.scss */
 #map:after {
   left: -5px;
   top: 0;
@@ -523,14 +528,14 @@ strong {
   width: 5px;
 }
 
-/* line 361, ../sass/style.scss */
+/* line 368, ../sass/style.scss */
 #map {
   width: inherit;
   height: inherit;
   background-color: #CCC;
 }
 
-/* line 367, ../sass/style.scss */
+/* line 374, ../sass/style.scss */
 .inputText, .inputTextArea {
   width: 21em;
   height: 5.5rem;
@@ -543,19 +548,19 @@ strong {
   font-weight: 500;
 }
 @media (max-width: 1100px) {
-  /* line 367, ../sass/style.scss */
+  /* line 374, ../sass/style.scss */
   .inputText, .inputTextArea {
     width: 50vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 367, ../sass/style.scss */
+  /* line 374, ../sass/style.scss */
   .inputText, .inputTextArea {
     width: 70vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 367, ../sass/style.scss */
+  /* line 374, ../sass/style.scss */
   .inputText, .inputTextArea {
     width: 85vw;
   }
@@ -585,12 +590,12 @@ strong {
   font-weight: 400;
 }
 
-/* line 378, ../sass/style.scss */
+/* line 385, ../sass/style.scss */
 input:focus {
   text-decoration: none !important;
 }
 
-/* line 382, ../sass/style.scss */
+/* line 389, ../sass/style.scss */
 .submitButton {
   color: #F1F2F2;
   font-size: 2rem;
@@ -604,19 +609,19 @@ input:focus {
   border: none;
 }
 @media (max-width: 1100px) {
-  /* line 382, ../sass/style.scss */
+  /* line 389, ../sass/style.scss */
   .submitButton {
     width: 50vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 382, ../sass/style.scss */
+  /* line 389, ../sass/style.scss */
   .submitButton {
     width: 70vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 382, ../sass/style.scss */
+  /* line 389, ../sass/style.scss */
   .submitButton {
     width: 85vw;
   }
