--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9,11 +9,11 @@
 }
 
 /* line 13, ../sass/style.scss */
-.section, .sectionTop, .sectionBottom, .imageCenter, .logoSubtitle, .drawing, .redButton, .blackButton, .circle, .map-container {
-  transition: height 999999s,  margin-top 999999s,  width 999999s,  margin-left 999999s,  margin-right 999999s, margin-bottom 999999s;
+.section, .sectionTop {
+  transition: height 999999s;
 }
 
-/* line 23, ../sass/style.scss */
+/* line 17, ../sass/style.scss */
 .section {
   text-align: center;
   text-align: -moz-center;
@@ -22,174 +22,156 @@
   margin-right: auto;
 }
 
-/* line 27, ../sass/style.scss */
+/* line 21, ../sass/style.scss */
+.sectionTop {
+  height: 72vh;
+}
+
+/* line 25, ../sass/style.scss */
 .firstType {
   background-color: #D83454;
   height: 100vh;
-  width: 100vw;
   display: table-cell;
+  width: 100vw;
 }
-/* line 31, ../sass/style.scss */
+/* line 29, ../sass/style.scss */
 .firstType .sectionTop {
   display: table-cell;
   vertical-align: bottom;
-  height: 75vh;
 }
-/* line 36, ../sass/style.scss */
+/* line 33, ../sass/style.scss */
 .firstType .sectionBottom {
-  margin-top: 10vh;
+  margin-top: 6.5rem;
 }
 @media (max-width: 900px) {
-  /* line 36, ../sass/style.scss */
+  /* line 33, ../sass/style.scss */
   .firstType .sectionBottom {
-    margin-top: 8vh;
+    margin-top: 3.5rem;
   }
 }
 @media (max-width: 740px) {
-  /* line 36, ../sass/style.scss */
+  /* line 33, ../sass/style.scss */
   .firstType .sectionBottom {
-    margin-top: 6vh;
+    margin-top: 2.5rem;
   }
 }
 
-/* line 47, ../sass/style.scss */
+/* line 44, ../sass/style.scss */
 .secondType {
   background-color: #F1F2F2;
   height: 100vh;
 }
-/* line 49, ../sass/style.scss */
-.secondType .sectionTop {
-  height: 75vh;
-}
-@media (max-width: 1100px) {
-  /* line 49, ../sass/style.scss */
-  .secondType .sectionTop {
-    height: 70vh;
-  }
-}
-@media (max-width: 900px) {
-  /* line 49, ../sass/style.scss */
+@media (max-width: 590px) {
+  /* line 46, ../sass/style.scss */
   .secondType .sectionTop {
     height: 65vh;
   }
 }
-@media (max-width: 740px) {
-  /* line 49, ../sass/style.scss */
-  .secondType .sectionTop {
-    height: 60vh;
-  }
+/* line 51, ../sass/style.scss */
+.secondType .sectionBottom {
+  margin-top: 1rem;
 }
-@media (max-width: 590px) {
-  /* line 49, ../sass/style.scss */
-  .secondType .sectionTop {
-    height: 55vh;
+@media (max-width: 900px) {
+  /* line 51, ../sass/style.scss */
+  .secondType .sectionBottom {
+    margin-top: 0rem;
   }
 }
 
-/* line 67, ../sass/style.scss */
+/* line 59, ../sass/style.scss */
 .thirdType, .fourthType {
   background-color: #FFF;
   height: 100vh;
   min-height: 50rem;
 }
-/* line 70, ../sass/style.scss */
-.thirdType .sectionTop, .fourthType .sectionTop {
-  height: 75vh;
-}
-/* line 73, ../sass/style.scss */
+/* line 62, ../sass/style.scss */
 .thirdType .sectionBottom, .fourthType .sectionBottom {
   margin-top: 7rem;
 }
 
-/* line 78, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 .fourthType {
   background-color: #F1F2F2;
   height: 100vh;
 }
 
-/* line 83, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 .imageCenter {
-  width: 40vh;
+  width: 26rem;
 }
 
-/* line 87, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .logoSubtitle {
   color: #F1F2F2;
   font-size: 2rem;
   font-weight: 400;
   letter-spacing: 1px;
   line-height: 128%;
-  margin-top: 10vh;
+  margin-top: 6rem;
   margin-left: 30vw;
   margin-right: 30vw;
 }
 @media (max-width: 1100px) {
-  /* line 87, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 25vw;
     margin-right: 25vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 87, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 20vw;
     margin-right: 20vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 87, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 15vw;
     margin-right: 15vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 87, ../sass/style.scss */
+  /* line 76, ../sass/style.scss */
   .logoSubtitle {
     margin-left: 8vw;
     margin-right: 8vw;
   }
 }
 
-/* line 112, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .drawing {
-  width: 75vh;
-  margin-top: 9vw;
+  width: 48rem;
+  margin-top: 13rem;
 }
-@media (max-width: 1100px) and (orientation: portrait) {
-  /* line 112, ../sass/style.scss */
+@media (max-width: 900px) {
+  /* line 101, ../sass/style.scss */
   .drawing {
-    width: 35vh;
-    margin-top: 11vw;
+    width: 44rem;
+  }
+}
+@media (max-width: 740px) {
+  /* line 101, ../sass/style.scss */
+  .drawing {
+    width: 38rem;
+    margin-top: 16rem;
+  }
+}
+@media (max-width: 590px) {
+  /* line 101, ../sass/style.scss */
+  .drawing {
+    width: 32rem;
+  }
+}
+@media (max-width: 480px) {
+  /* line 101, ../sass/style.scss */
+  .drawing {
+    width: 28rem;
   }
 }
 
-@media (max-width: 900px) and (orientation: portrait) {
-  /* line 112, ../sass/style.scss */
-  .drawing {
-    width: 40vh;
-    margin-top: 13vw;
-  }
-}
-
-@media (max-width: 740px) and (orientation: portrait) {
-  /* line 112, ../sass/style.scss */
-  .drawing {
-    width: 60vh;
-    margin-top: 15vw;
-  }
-}
-
-@media (max-width: 590px) and (orientation: portrait) {
-  /* line 112, ../sass/style.scss */
-  .drawing {
-    width: 40vh;
-    margin-top: 17vw;
-  }
-}
-
-/* line 133, ../sass/style.scss */
+/* line 119, ../sass/style.scss */
 .drawingSubtitle {
   color: #434244;
   font-size: 2.9rem;
@@ -197,15 +179,16 @@
   letter-spacing: 0.4px;
   margin-left: 10vw;
   margin-right: 10vw;
+  margin-top: 0;
 }
 
-/* line 140, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 strong {
   font-weight: normal;
   color: #D83454;
 }
 
-/* line 145, ../sass/style.scss */
+/* line 132, ../sass/style.scss */
 .scrollButton {
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -223,45 +206,32 @@ strong {
   -webkit-box-shadow: #434244 1px 1px 20px -5px;
   box-shadow: #434244 1px 1px 20px -5px;
 }
-/* line 156, ../sass/style.scss */
+/* line 143, ../sass/style.scss */
 .scrollButton:active {
   -moz-box-shadow: #434244 0px 0px 0px;
   -webkit-box-shadow: #434244 0px 0px 0px;
   box-shadow: #434244 0px 0px 0px;
 }
 
-/* line 161, ../sass/style.scss */
+/* line 148, ../sass/style.scss */
 .redButton {
   background-color: #D83454;
   border-width: 3px;
   width: 4.8rem;
   height: 4.8rem;
-  margin-top: 5vh;
-}
-@media (max-width: 900px) {
-  /* line 161, ../sass/style.scss */
-  .redButton {
-    margin-top: 6vh;
-  }
-}
-@media (max-width: 740px) {
-  /* line 161, ../sass/style.scss */
-  .redButton {
-    margin-top: 11vh;
-  }
+  margin-top: 3.1rem;
 }
 
-/* line 175, ../sass/style.scss */
+/* line 156, ../sass/style.scss */
 .blackButton {
   background: url("../images/arrowDownBlack.png") no-repeat center/35%;
   border-color: #434244;
   border-width: 2.5px;
   width: 4.8rem;
   height: 4.8rem;
-  margin-top: 5vh;
 }
 
-/* line 184, ../sass/style.scss */
+/* line 164, ../sass/style.scss */
 .titleWithMargin, .titleWithMargin.clients, .titleWithoutMargin {
   color: #434244;
   font-size: 6.2rem;
@@ -271,83 +241,83 @@ strong {
   margin-bottom: 10.5rem;
 }
 @media (max-width: 700px) {
-  /* line 184, ../sass/style.scss */
+  /* line 164, ../sass/style.scss */
   .titleWithMargin, .titleWithMargin.clients, .titleWithoutMargin {
     margin-bottom: 3rem;
   }
 }
 
 @media (max-width: 700px) {
-  /* line 194, ../sass/style.scss */
+  /* line 174, ../sass/style.scss */
   .titleWithMargin.clients, .clients.titleWithoutMargin {
     margin-bottom: 10.5rem;
   }
 }
 
-/* line 201, ../sass/style.scss */
+/* line 181, ../sass/style.scss */
 .titleWithoutMargin {
   margin-bottom: 3rem;
 }
 
-/* line 206, ../sass/style.scss */
+/* line 186, ../sass/style.scss */
 .servicesContainer {
   margin-left: auto;
   margin-right: auto;
   width: 77vw;
 }
 @media (max-width: 993px) {
-  /* line 206, ../sass/style.scss */
+  /* line 186, ../sass/style.scss */
   .servicesContainer {
     width: 90vw;
   }
 }
 @media (max-width: 700px) {
-  /* line 206, ../sass/style.scss */
+  /* line 186, ../sass/style.scss */
   .servicesContainer {
     text-align: left;
   }
 }
 
-/* line 217, ../sass/style.scss */
+/* line 197, ../sass/style.scss */
 .circle {
-  -moz-border-radius: 25vh;
-  -webkit-border-radius: 25vh;
-  border-radius: 25vh;
+  -moz-border-radius: 20rem;
+  -webkit-border-radius: 20rem;
+  border-radius: 20rem;
   width: 14vw;
   height: 14vw;
 }
 @media (max-width: 700px) {
-  /* line 217, ../sass/style.scss */
+  /* line 197, ../sass/style.scss */
   .circle {
-    width: 12vh;
-    height: 12vh;
+    width: 7.5rem;
+    height: 7.5rem;
     display: inline-block;
     vertical-align: middle;
     margin-bottom: 2rem;
   }
 }
 
-/* line 230, ../sass/style.scss */
+/* line 210, ../sass/style.scss */
 .service1 {
   background: #D83454 url("../images/service1.png") no-repeat center/44%;
 }
 
-/* line 233, ../sass/style.scss */
+/* line 213, ../sass/style.scss */
 .service2 {
   background: #D83454 url("../images/service2.png") no-repeat center/44%;
 }
 
-/* line 236, ../sass/style.scss */
+/* line 216, ../sass/style.scss */
 .service3 {
   background: #D83454 url("../images/service3.png") no-repeat center/44%;
 }
 
-/* line 239, ../sass/style.scss */
+/* line 219, ../sass/style.scss */
 .service4 {
   background: #D83454 url("../images/service4.png") no-repeat center/44%;
 }
 
-/* line 243, ../sass/style.scss */
+/* line 223, ../sass/style.scss */
 .circleSubtitle {
   color: #434244;
   font-size: 2rem;
@@ -357,7 +327,7 @@ strong {
   margin-top: 5rem;
 }
 @media (max-width: 700px) {
-  /* line 243, ../sass/style.scss */
+  /* line 223, ../sass/style.scss */
   .circleSubtitle {
     margin-top: 2rem;
     display: inline-block;
@@ -366,7 +336,7 @@ strong {
   }
 }
 @media (max-width: 360px) {
-  /* line 243, ../sass/style.scss */
+  /* line 223, ../sass/style.scss */
   .circleSubtitle {
     margin-left: 0.5rem;
     color: #434244;
@@ -375,7 +345,7 @@ strong {
   }
 }
 
-/* line 258, ../sass/style.scss */
+/* line 238, ../sass/style.scss */
 .client {
   -webkit-filter: grayscale(100%) brightness(60%);
   filter: grayscale(100%) brightness(60%);
@@ -385,45 +355,45 @@ strong {
   height: 18.5rem;
   cursor: pointer;
 }
-/* line 264, ../sass/style.scss */
+/* line 244, ../sass/style.scss */
 .client:hover {
   -webkit-filter: grayscale(0%) brightness(100%);
   filter: grayscale(0%) brightness(100%);
 }
 
-/* line 269, ../sass/style.scss */
+/* line 249, ../sass/style.scss */
 .client1 {
   background: url("../images/client1.png") no-repeat center/100%;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
 }
-/* line 272, ../sass/style.scss */
+/* line 252, ../sass/style.scss */
 .client1:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 276, ../sass/style.scss */
+/* line 256, ../sass/style.scss */
 .client2 {
   background: url("../images/client2.png") no-repeat center/100%;
 }
 
-/* line 279, ../sass/style.scss */
+/* line 259, ../sass/style.scss */
 .client3 {
   background: url("../images/client3.png") no-repeat center/80%;
 }
 
-/* line 282, ../sass/style.scss */
+/* line 262, ../sass/style.scss */
 .client4 {
   background: url("../images/logo.png") no-repeat center/100%;
 }
 
-/* line 286, ../sass/style.scss */
+/* line 266, ../sass/style.scss */
 .owl-wrapper-outer {
   z-index: 20;
 }
 
-/* line 289, ../sass/style.scss */
+/* line 269, ../sass/style.scss */
 .owl-buttons {
   position: absolute !important;
   top: 5.5rem !important;
@@ -432,27 +402,27 @@ strong {
   padding-right: 3vw;
 }
 @media (max-width: 1100px) {
-  /* line 289, ../sass/style.scss */
+  /* line 269, ../sass/style.scss */
   .owl-buttons {
     padding-left: 1.5vw;
     padding-right: 1.5vw;
   }
 }
 @media (max-width: 900px) {
-  /* line 289, ../sass/style.scss */
+  /* line 269, ../sass/style.scss */
   .owl-buttons {
     padding-left: 0vw;
     padding-right: 0vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 289, ../sass/style.scss */
+  /* line 269, ../sass/style.scss */
   .owl-buttons {
     display: none;
   }
 }
 
-/* line 308, ../sass/style.scss */
+/* line 288, ../sass/style.scss */
 .owl-prev, .owl-next {
   font-size: 4rem !important;
   font-weight: 600 !important;
@@ -463,31 +433,31 @@ strong {
   float: left;
 }
 
-/* line 318, ../sass/style.scss */
+/* line 298, ../sass/style.scss */
 .owl-next {
   float: right;
 }
 
-/* line 323, ../sass/style.scss */
+/* line 303, ../sass/style.scss */
 #mapTitle:before {
   content: "How to find us";
 }
 @media (max-width: 590px) {
-  /* line 323, ../sass/style.scss */
+  /* line 303, ../sass/style.scss */
   #mapTitle:before {
     content: "Find us";
   }
 }
 
-/* line 330, ../sass/style.scss */
+/* line 310, ../sass/style.scss */
 .map-container {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 55vh;
+  height: 85%;
 }
 
-/* line 336, ../sass/style.scss */
+/* line 316, ../sass/style.scss */
 .map-container:before, .map-container:after, #map:before, #map:after {
   position: absolute;
   display: block;
@@ -496,7 +466,7 @@ strong {
   z-index: 5;
 }
 
-/* line 343, ../sass/style.scss */
+/* line 323, ../sass/style.scss */
 .map-container:before {
   top: -5px;
   left: 0;
@@ -504,7 +474,7 @@ strong {
   height: 5px;
 }
 
-/* line 349, ../sass/style.scss */
+/* line 329, ../sass/style.scss */
 .map-container:after {
   right: -5px;
   top: 0;
@@ -512,7 +482,7 @@ strong {
   width: 5px;
 }
 
-/* line 355, ../sass/style.scss */
+/* line 335, ../sass/style.scss */
 #map:before {
   bottom: -5px;
   left: 0;
@@ -520,7 +490,7 @@ strong {
   height: 5px;
 }
 
-/* line 361, ../sass/style.scss */
+/* line 341, ../sass/style.scss */
 #map:after {
   left: -5px;
   top: 0;
@@ -528,14 +498,14 @@ strong {
   width: 5px;
 }
 
-/* line 368, ../sass/style.scss */
+/* line 348, ../sass/style.scss */
 #map {
   width: inherit;
   height: inherit;
   background-color: #CCC;
 }
 
-/* line 374, ../sass/style.scss */
+/* line 354, ../sass/style.scss */
 .inputText, .inputTextArea {
   width: 21em;
   height: 5.5rem;
@@ -548,19 +518,19 @@ strong {
   font-weight: 500;
 }
 @media (max-width: 1100px) {
-  /* line 374, ../sass/style.scss */
+  /* line 354, ../sass/style.scss */
   .inputText, .inputTextArea {
     width: 50vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 374, ../sass/style.scss */
+  /* line 354, ../sass/style.scss */
   .inputText, .inputTextArea {
     width: 70vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 374, ../sass/style.scss */
+  /* line 354, ../sass/style.scss */
   .inputText, .inputTextArea {
     width: 85vw;
   }
@@ -590,12 +560,12 @@ strong {
   font-weight: 400;
 }
 
-/* line 385, ../sass/style.scss */
+/* line 365, ../sass/style.scss */
 input:focus {
   text-decoration: none !important;
 }
 
-/* line 389, ../sass/style.scss */
+/* line 369, ../sass/style.scss */
 .submitButton {
   color: #F1F2F2;
   font-size: 2rem;
@@ -609,19 +579,19 @@ input:focus {
   border: none;
 }
 @media (max-width: 1100px) {
-  /* line 389, ../sass/style.scss */
+  /* line 369, ../sass/style.scss */
   .submitButton {
     width: 50vw;
   }
 }
 @media (max-width: 740px) {
-  /* line 389, ../sass/style.scss */
+  /* line 369, ../sass/style.scss */
   .submitButton {
     width: 70vw;
   }
 }
 @media (max-width: 590px) {
-  /* line 389, ../sass/style.scss */
+  /* line 369, ../sass/style.scss */
   .submitButton {
     width: 85vw;
   }
